--- a/programs/anchor-program-example/Cargo.toml
+++ b/programs/anchor-program-example/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "server"
+name = "anchor-program-example"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "server"
+name = "anchor_program_example"
 
 [features]
 no-entrypoint = []
@@ -17,3 +17,4 @@ default = []
 
 [dependencies]
 anchor-lang = "0.29.0"
+ahash = "=0.8.6"
